Fix scooter object position on tablet

--- a/7-wrapup/begin/css/style.css
+++ b/7-wrapup/begin/css/style.css
@@ -365,6 +365,9 @@ footer address {
     #popular li:last-child {
         flex-basis: 100%;
     }
+    #popular li:last-child figure img {
+        object-position: 0 -21.875rem;
+    }
 }
 
 @media (min-width: 800px) {
@@ -409,5 +412,8 @@ footer address {
     }
     #popular li:last-child {
         flex-basis: 32%;
+    }
+    #popular li:last-child figure img {
+        object-position: 0;
     }
 }
